src/components/Shopping/ShoppingItem.module.css
.shopping-item:not(:last-child) {
  border-bottom: 1px solid rgb(204, 204, 204);;
}

.shopping-item:first-child {
  padding-bottom: 22px;
}

.shopping-item:not(:first-child, :last-child) {
  padding: 22px 0;
}

.shopping-item:last-child {
  padding-top: 22px;
}

.shopping-item h3 {
  align-self: flex-start;
}

.shopping-item p {
  margin: 0;
}

.shopping-item a {
  color: black;
}

.shopping-item .desc {
  width: 80%;
  color: rgb(158, 158, 158);
}

.shopping-item .quantity {
  font-weight: 600;
  color: rgb(107, 107, 107);
}

.shopping-item .action {
  margin-top: 8px;
  font-size: 12px;
}

.shopping-item .action i {
  margin-right: 7px;
  font-size: 11px;
}

.shopping-item .action .danger {
  color: brown;
}

.shopping-item .action .warning {
  color: rgb(160, 136, 0);
}

.shopping-item .action .success {
  color: rgb(12, 141, 70);
}

